--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,9 +1,11 @@
-name: AspNetCore.Hashids Nuget Preview
+name: AspNetCore.Hashids Nuget
 
 on:
-  pull_request:
+  push:
     branches:
-      - releases/**
+      - master
+    tags:
+      - v*
 
 jobs:
   publish:
@@ -25,7 +27,7 @@ jobs:
       - name: Test
         run: dotnet test --no-build --no-restore --verbosity normal
       - name: Pack
-        run: dotnet pack ./src/AspNetCore.Hashids/AspNetCore.Hashids.csproj -c $build_configuration --version-suffix $version_suffix --no-build --include-source --include-symbols -o ./artifacts
+        run: dotnet pack ./src/AspNetCore.Hashids/AspNetCore.Hashids.csproj -c $build_configuration --no-build --include-source --include-symbols -o ./artifacts
       - name: Setup NuGet
         uses: NuGet/setup-nuget@1.0.2
         with:
