--- a/src/AspNetCore.Hashids/AspNetCore.Hashids.csproj
+++ b/src/AspNetCore.Hashids/AspNetCore.Hashids.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>$(NetCoreTargetVersion)</TargetFramework>
     <PackageLicenseUrl>$(PackageLicenseUrl)</PackageLicenseUrl>
     <PackageProjectUrl>$(PackageProjectUrl)</PackageProjectUrl>
-    <Description>Authorization Framework Library for ASP.NET Core. For more information see http://github.com/Xabaril/AspNetCore.Hashids </Description>
-    <PackageTags>Hashids;AspNetCore</PackageTags>
+    <Description>Not predictable ids library for ASP.NET Core APIs. For more information see http://github.com/Xabaril/AspNetCore.Hashids </Description>
+    <PackageTags>Hashids;AspNetCore;WebApi,REST,BestPractices</PackageTags>
     <Version>$(AspNetCoreHashids)</Version>
     <RepositoryUrl>$(RepositoryUrl)</RepositoryUrl>
     <Company>$(Company)</Company>
