--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Update="Microsoft.Extensions.Options" Version="$(AspNetCoreVersion)" />
     <PackageReference Update="Hashids.net" Version="1.3.0" />
-    <PackageReference Update="Swashbuckle.AspNetCore" Version="5.5.1" />
+    <PackageReference Update="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup Label="Testing Dependencies">
@@ -21,7 +21,7 @@
     <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Update="Respawn" Version="3.3.0" />
     <PackageReference Update="xunit" Version="2.4.1" />
-    <PackageReference Update="xunit.runner.visualstudio" Version="2.4.2">
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -29,5 +29,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Update="xunit" Version="2.4.1" />
+    <PackageReference Update="Microsoft.AspNetCore.TestHost" Version="$(AspNetCoreVersion)" />
+    <PackageReference Update="FluentAssertions" Version="5.10.3" />
   </ItemGroup>
 </Project>
