Fix nuget publish

--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: dotnet build --configuration $build_configuration --no-restore
       - name: Test
-        run: dotnet test --no-build --no-restore --verbosity normal
+        run: dotnet test --no-restore --verbosity normal
       - name: Pack
         run: dotnet pack ./src/AspNetCore.Hashids/AspNetCore.Hashids.csproj -c $build_configuration --no-build --include-source --include-symbols -o ./artifacts
       - name: Setup NuGet
